# pubmed-cli-paperfetcher

./: CovidVaccine.csv  Covid_result.csv  README.md  cli.py  output.csv  pyproject.toml  results.csv
paperfetcher/: __init__.py  core.py  ollama_client.py  pubmed_pharma_output.csv  utils.py  writer.py
tests/: test_core.py  test_ollama_client.py  test_utils.py  test_writer.py
